--- a/css/style.css
+++ b/css/style.css
@@ -6,47 +6,13 @@ body{
   background-color:lightgrey;  
   font-family: 'Kaushan Script', cursive;
 }
+
 .wrapper{
   width:90%;
   margin:0 auto;
   background:linear-gradient( to right, #e55d87, #5fc3e4);
 }
-header{
-  display:grid;
-  grid-template-columns:300px 300px 200px 205px;
-  grid-template-rows:100px 600px; 
-  
-}
-.r1c1 {
-  grid-row:1/2;
-  grid-column:2/4;
-  
-}
-.r1c4{
-    grid-row:1/2;
-    grid-column:4/6
-}
-.r2c1{
-  grid-row:2/3;
-  grid-column:1/3;
-  
-}
-.r2c2{
-  grid-row:2/3;
-  grid-column:3/6;
-}
 
-
-.nav{
-  display:flex;
-  flex-flow: row wrap;
-  justify-content:space-between;
-  list-style:none;
-  
-}
-li{
-  left:0;
-}
 h2{
   font-family: 'Dancing Script', cursive;
   color:#005baf;
@@ -63,6 +29,42 @@ p{
   margin:1em;
   font-size:1.2em;
 }
+
+/* Header Grid*/
+header{
+  display:grid;
+  grid-template-columns:300px 300px 200px 205px;
+  grid-template-rows:100px 600px;   
+}
+.Theader {
+  grid-row:1/2;
+  grid-column:2/4; 
+  
+}
+.Lheader{
+  grid-row:2/3;
+  grid-column:1/3; 
+
+}
+.Rheader-button{
+  grid-row:1/2;
+  grid-column:4/6;
+
+}
+.Rheader{
+  grid-row:2/3;
+  grid-column:3/6;
+
+}
+
+.nav{
+  display:flex;
+  flex-flow: row wrap;
+  justify-content:space-between;
+  list-style:none;
+  
+}
+
 button{
   color:white;
   background:linear-gradient( to top, #e55d87, #5fc3e4);
@@ -72,35 +74,37 @@ button{
   font-size: 1em;
   margin-top:0.5em;
 }
+/* Image Grid*/
 .grid{
   display:grid;
   grid-template-columns: 20px 50px 100px 150px 140px 80px 50px;
   grid-template-rows: 20px 80px 100px 150px 100px 100px;
 }
-.col-2{
+.Limage{
   grid-column:2/4;
   grid-row:5/7;
-  order:1
+  order:1;
   
 }
-.col-3{
+.Mimage{
   grid-column:3/7;
   grid-row:3/6;
   order:-3;
  
 }
-.col-5{
+.Rimage{
   grid-column:6/8;
   grid-row:2/4;
-  order:2
+  order:2;
+
 }
 .img-grid{
   display:block;
   width:100%;
   height:100%;
   border-radius:20px;
-}
 
+}
 
 
 
