--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,14 @@ body{
   position:relative;
   background-color:lightgrey;  
   font-family: 'Kaushan Script', cursive;
+  margin: 0;
+  padding: 0;
 }
 
 .wrapper{
   width:90%;
   margin:0 auto;
-  background:linear-gradient( to right, #e55d87, #5fc3e4);
+  background-color: #ffff;
 }
 
 h2{
@@ -35,17 +37,20 @@ header{
   display:grid;
   grid-template-columns:300px 300px 200px 205px;
   grid-template-rows:100px 600px;   
+  background:linear-gradient( to right, #e55d87, #5fc3e4);
 }
 .Theader {
   grid-row:1/2;
   grid-column:2/4; 
   
 }
+
 .Lheader{
   grid-row:2/3;
   grid-column:1/3; 
 
 }
+
 .Rheader-button{
   grid-row:1/2;
   grid-column:4/6;
@@ -54,6 +59,21 @@ header{
 .Rheader{
   grid-row:2/3;
   grid-column:3/6;
+
+}
+
+/*logo*/
+.Theader-logo{
+  grid-row:1/2;
+  grid-column:1/2;
+  
+}
+
+.brand{ 
+  width:75px;
+  height: 75px;
+  cursor:grab;
+  z-index: 10;
 
 }
 
@@ -106,5 +126,52 @@ button{
 
 }
 
+/*Gallery*/
+.image-gallery{
+  display:none;
+  max-height:600px;
+ 
+}
 
+.active{display:block;
+}
+
+.gallery{
+  width:100%;
+  margin-top: 1em;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.gallery p{
+  text-align:center;
+
+}
+.btns{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 2em;
+  color:#df2963;
+}
+
+.button{
+  cursor: pointer;
+}
+
+.button:disabled{
+  cursor:not-allowed;
+  color:#0000;
+}
+/*using swipper*/
+.swiper-slide {
+  text-align: center;
+}
+
+.gallery-p{
+  margin:0.5em 0 0 1em;
+  padding-bottom:1em;
+  font-size:2.5em;
+}
 
